For a documentation of all features, see
http://semantic-mediawiki.org/wiki/Semantic_Result_Formats


== SRF 1.6 ==

Changes in this version:
* Added compatibility with SMW 1.6.
* Cleaned up the graph format.
* Fixed division by zero issue (oh shii~) in the tagcloud format.
* Added parameter descriptions to the graph and ploticus formats. 
* Added support for SMW 1.6 style parameter handling to the tagcloud format.
* Somewhat cleaned up the BibTeX format.
* Fixed double HTML escaping issue in the tagcloud format.

== SRF 1.5.3 ==

Released on February 9, 2011.

Changes in this version:
* Support for images specified by properties in the gallery format.
* Fixes to the calendar and jqplot formats.
* Improvements to the timeline and eventline formats.

New formats in this version are:
* tagcloud (written by Jeroen De Dauw)

== SRF 1.5.2 ==

Released on January 11 2011.

Changes in this version:
* Handling for ResourceLoader in MediaWiki 1.17+ added for
  'timeline', 'eventline', 'jqplotbar' and 'jqplotpie' formats.
* Visualization improvements for 'process' format.

== SRF 1.5.1 ==

Released on August 26 2010.

New formats in this version are:
* jqplotbar (written by Sanyam Goyal and Yaron Koren)
* jqplotpie (written by Sanyam Goyal and Yaron Koren)

Other changes:
* Added support for 'semantic' extension type, added by SMW 1.5.2 and above.

== SRF 1.5 ==

Released on June 22 2010.

New formats in this version are:
* gallery (written by Rowan Rodrik van der Molen)

Changes in this version:
* the functions getName() and getParameters() were added to most formats, for use in Special:Ask
* a 'lang' parameter was added to the 'calendar' format
* improvements in 'exhibit' result format
** new facet styles (slider and search)

== SRF 1.4.5 ==

Released on June 3 2009.

New formats in this version are:
* outline (written by Yaron Koren)

Other changes:
* the 'ploticus' format was disabled, due to a security hole
* the 'calendar' format no longer requires disabling of caching