@@ -6,6 +6,8 @@ http://semantic-mediawiki.org/wiki/Semantic_Result_Formats
 
 Changes in this version:
 * Added compatibility with SMW 1.6.
+* Added product format.
+* Rewrote math formats for efficiency, correct recursion and handling of multiple numerical properties.
 * Cleaned up the graph format.
 * Fixed division by zero issue (oh shii~) in the tagcloud format.
 * Added parameter descriptions to the graph and ploticus formats. 
